Use j.i.m.Unsafe instead of s.m.Unsafe.
Bug: 383294556
Test: presubmit
Change-Id: Id9d64578baced95e08c199b7edc119cf32e3efc8